# goose-evolve

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: architecture.md
evolution/: __init__.py  engine.py  fitness.py  interfaces.py  variants.py
evolve_core/: __init__.py  cli.py  config.py  logging_config.py  safety.py
goose_evolve/: __init__.py  cli.py  config.py  logging_config.py  safety.py
mcp_server/: __init__.py  errors.py  schemas.py  serializers.py  server.py  state.py
monitoring/: __init__.py  metrics.py
tests/: __init__.py
tests/evolution/: __init__.py  test_engine.py  test_fitness.py  test_variants.py
tests/integration/: test_basic_integration.py  test_core_integration.py
tests/monitoring/: test_metrics.py
